name:                parser-demo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/parser-demo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Parse
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , array
                     , mtl
                     , parsec
  ghc-options: -Wall
  default-language:    Haskell2010

executable parser-demo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       QQ
                       Boilerplate
                       Util
                       Dia
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parser-demo
                     , webkitgtk3, gtk3, transformers, template-haskell
                     , mtl, containers
                     , diagrams
                     , diagrams-lib
                     , diagrams-contrib
                     , diagrams-svg
                     , array
  default-language:    Haskell2010

test-suite parser-demo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parser-demo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/parser-demo
